avancé du template front

--- a/templates/command/index.html.twig
+++ b/templates/command/index.html.twig
@@ -59,7 +59,7 @@
       <div class "valider-button">
     <button type="button" class="btn btn-primary btn-lg btn-block">Valider</button>
     </table>
-    
+    {% endif %}
     </div>
   {% endblock %}
 
