--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -10,13 +10,14 @@
         <thead>
           <tr>
             <th class="first">Photo</th>
+            <th class="first">Description</th>
             <th class="second">Quantité</th>
             <th class="third">Produit</th>
-            <th class="fourth">Total</th>
-            <th class="fifth">&nbsp;</th>
+            <th class="fourth">Prix</th>
+            <th class="five">Total</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody height="500px">
           {% for item in items %}
           <tr class="productitm">
             
