--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{{ asset ('css/magnific-popup.css') }}">
     <link rel="stylesheet" href="{{ asset ('css/slick.css') }}">
     <link rel="stylesheet" href="{{ asset ('css/style.css') }}">
+    
 </head>
 {% endblock %} {% block header %}
 
@@ -362,4 +363,6 @@
     <script src="{{ asset ('js/mail-script.js') }}"></script>
     <script src="{{ asset ('js/custom.js') }}"></script>
     <script src="{{ asset ('js/scriptcommand.js') }}"></script>
+    <script src="{{ asset ('https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.2.0/build/ol.js')}}"></script>
+    <script src="{{ asset ('https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList')}}"></script>
     {% endblock %}
