--- a/templates/formulaire/index.html.twig
+++ b/templates/formulaire/index.html.twig
@@ -34,7 +34,7 @@
                     });
                 }
             </script>
-            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap">
+            <script src="{{ asset ('https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap')}}">
             </script>
 
         </div>
