--- a/templates/paiement/index.html.twig
+++ b/templates/paiement/index.html.twig
@@ -1,1 +1,11 @@
-{% extends "base.html.twig" %}
+
+
+{% block title %}Hello PaiementController!{% endblock %}
+
+{% block body %}
+
+
+<div class="example-wrapper">
+    <p>Votre pâiement a bien été effectué, vous allez etre rediriger vers nos produits.</p>
+</div>
+{% endblock %}
