--- a/templates/formulaire/index.html.twig
+++ b/templates/formulaire/index.html.twig
@@ -1,29 +1,105 @@
 {% extends "base.html.twig" %}
-{% block title %}Hello FormulaireController!{% endblock %}
-
 {% block main %}
-<form class="formu" action={{ path('send')}} method="post">
-<div class="container">
-<div class="col-md-4 form-group">
-                   <label for="nom">Entrez votre nom</label>
-                   <input type="text" class="form-control" name="nom" id="nom" placeholder="" required>
-                 </div>
-                 <div class="col-md-4 form-group">
-                   <label for="prenom">Entrez votre prenom</label>
-                   <input type="text" class="form-control" name="prenom" id="nom" placeholder=""  required>
-                 </div>
-  <div class="col-md-4 form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" required>
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
+<section class="contact-section section_padding">
+    <div class="container">
+        <div class="d-none d-sm-block mb-5 pb-4">
+            <div id="map" style="height: 480px;"></div>
+            <script>
+                function initMap() {
+                    var uluru = {
+                        lat: -25.363,
+                        lng: 131.044
+                    };
+                    var grayStyles = [{
+                        featureType: "all",
+                        stylers: [{
+                            saturation: -90
+                        }, {
+                            lightness: 50
+                        }]
+                    }, {
+                        elementType: 'labels.text.fill',
+                        stylers: [{
+                            color: '#ccdee9'
+                        }]
+                    }];
+                    var map = new google.maps.Map(document.getElementById('map'), {
+                        center: {
+                            lat: -31.197,
+                            lng: 150.744
+                        },
+                        zoom: 9,
+                        styles: grayStyles,
+                        scrollwheel: false
+                    });
+                }
+            </script>
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap">
+            </script>
 
-  <div class="col-md-7 form-group">
-    <label for="exampleFormControlTextarea1">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" name="commentaire" rows="3" required></textarea>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-  </div>
-</form>
+        </div>
 
+
+        <div class="row">
+            <div class="col-12">
+                <h2 class="contact-title">Tiens nous au jus</h2>
+            </div>
+            <div class="col-lg-8">
+                <form class="form-contact contact_form" action="{{ path ('send')}}" method="post">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="form-group">
+
+                                <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" 
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Tapez votre message'" 
+                                placeholder='Tapez votre message' required>
+                                </textarea>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <input class="form-control" name="nom" id="nom" type="text" 
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre nom'" 
+                                placeholder='Entrez votre nom' required>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="form-group">
+                                <input class="form-control" name="email" id="email" type="email" 
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Entrez votre email'" 
+                                placeholder='Entrez votre email' required>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                                <input class="form-control" name="objet" id="objet" type="text" 
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = 'Objet'" placeholder='Objet' required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mt-3">
+                        <button type="submit" class="btn btn-primary">Envoyer</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-lg-4">
+                <div class="media contact-info">
+                    <span class="contact-info__icon"><i class="ti-home"></i></span>
+                    <div class="media-body">
+                        <h3>Paris</h3>
+                        <p>Oberkampf</p>
+                    </div>
+                </div>
+                <div class="media contact-info">
+                    <span class="contact-info__icon"><i class="ti-tablet"></i></span>
+                    <div class="media-body">
+                        <h3>06 18 12 65 88</h3>
+                        <p>Du lundi au dimanche 9h00 - 19h00</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
