--- a/templates/produits/index.html.twig
+++ b/templates/produits/index.html.twig
@@ -1,37 +1,80 @@
-{% block stylesheet %}
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-{% endblock %}
-{% block body %}
+{% extends 'base.html.twig' %}
+{% block main %}
+{% block message %}
+            {% for succes in app.flashes('succes') %}
+                <div class="danger alert alert-danger">
+                    {{ succes }}
+                </div>
+            {% endfor %}
+    {% endblock %}
 
+<div>
+     <h1>Nos produits</h1>
+ <span>
+ 
+ </i>
+ </span>
+{% for produits in produit %}
+    <div class="clear"></div>
+   
+    <div>
+      
+        <div class="item">
+            <img src="{{ asset('img/') }}{{ produits.image }}" alt="Image de {{ produits.nom }}">
+             <h2>
+             {{ produits.nom }}
+                        -
+                        {{ produits.prix }}
+                        €
+             </h2>
+             <a href="{{ path('panier_add', {'id': produits.id}) }}" class="btn btn-success float-right">
 
-    <div class="card m-3">
-            <h1>Les produits</h1>
+            <p>Price: <em>$449</em>
+            </p>
+            <button class="add-to-cart" type="button">Add to cart</button>
+            <a href="{{ path('produits_like', {'id': produits.id}) }}" class="btn btn-link js-like">
+                        {% if app.user and produits.isLikedByUser(app.user) %}
+                        {% else %}
+                            <i class="far fa-thumbs-up"></i>
+                        {% endif %}                                                
+                        <span class="js-likes">{{ produits.id | length }}</span>
+                        <span class="js-label">J'aime</span>
+                    </a>
         </div>
-
-        <div class="row">
-            {% for produits in produit %}
-
-            <div class="card" style="width: 18rem;">
-    
-    <div class="card-body">
-    
-    <img src="{{asset('img/') }}{{produits.image}}" alt="Image de {{ produits.nom }}" class="card-img-top">
-    <h2>{{ produits.type }}</h2>
-        <h5 class="card-title">{{ produits.nom }}</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         
-    <a href="{{ path('panier_add', {'id': produits.id}) }}" class="btn btn-outline-secondary btn-block">
-
-            <h4>{{ produits.prix }}
-                            € Ajouter  <img src="{{ asset ('img/panier.png') }}"/></h4>
-
-            </a>
-                       
-    </div>
-    </div>
-            
-
-        {% endfor %}
-        </div>
     
+    </div>
+  {% endfor %}
+</div>
+{% endblock %}
+{% block javascripts %}
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+        function onClickBtnLike(event){
+            event.preventDefault();
+            const url = this.href;
+            const spanCount = this.querySelector('span.js-likes');
+            const icone = this.querySelector('i');
+            axios.get(url).then(function(response){
+                spanCount.textContent = response.data.likes;
+                
+                if(icone.classList.contains('fas')){
+                     icone.classList.replace('fas', 'far');
+                }
+                else{
+                    icone.classList.replace('far', 'fas');
+                }
+            }).catch(function(error){
+                if(error.response.status === 403){
+                    window.alert("Vous ne pouvez pas liker un article si vous n ete pas connecté")
+                }
+                else {
+                    window.alert("une erreur c est produite veuillez essayer plus tard")
+                }
+            })
+        }
+        document.querySelectorAll('a.js-like').forEach(function(link){
+            link.addEventListener('click', onClickBtnLike);
+        })
+    </script>
 {% endblock %}
